_/style.css
@layer util, theme, base, layout, interface;

@layer util {}

@layer theme {
  :root {
    color-scheme: dark light;
    /* Evaluates to 2rem for a 720px wide container, and 1rem for 360px */
    --padding: clamp(1rem, 0rem + 4.444cqi, 2rem);
    --padding-lg: calc(var(--padding) * 1.5);
    --padding-md: calc(var(--padding) * 1.25);
    --padding-sm: var(--padding);
    --padding-xs: calc(var(--padding) * 0.75);
    --padding-xxs: calc(var(--padding) * 0.375);
    --padding-xxxs: calc(var(--padding) * 0.1875);
    --maxwidth: 960px;
    --border-color: light-dark(#aaa, #444);
    --outline-color: light-dark(#e5c890, #f9e2af);
    --accent-color: light-dark(#3F113C, #EFE9E9);
    --bg-0: light-dark(#FFF, #111);
    --bg-1: light-dark(#FFE6FE, #130F12);
    --text-1: light-dark(#111, #EED9D9);
    --font-size: 20px;
    --line-height: 1.4;
  }
}

@layer base {
  .skip-to-content-link {
    background: var(--outline-color);
    color: var(--bg-0);
    display: block;
    padding: var(--padding-xxs);
    position: absolute;
    top: var(--padding-xxs);
    transform: translateY(-150%);
  }

  .skip-to-content-link:focus {
    transform: translateY(0%);
  }

  @view-transition {
    navigation: auto;
  }

  ::view-transition-old(root),
  ::view-transition-new(root) {
    animation-duration: 0.1s;
  }

  * {
    box-sizing: border-box;
  }


  html {

    background-color: var(--bg-1);
  }

  body {
    font-size: var(--font-size);
    color: var(--text-1);
    line-height: var(--line-height);
    font-family: "MD Lórien", Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
    font-weight: 400;
    font-optical-sizing: auto;
    box-sizing: border-box;
    padding: var(--padding-lg);

    &>main,
    &>header,
    &>footer,
    &>article>* {
      margin: 0 auto;
      container-type: inline-size;
      width: clamp(900px, 90vw);
      max-width: var(--maxwidth);
    }
  }

  section,
  footer {
    padding-top: var(--padding-md);
  }

  a {
    color: var(--accent-color);
    text-decoration: none;
    border-bottom: 1px solid var(--border-color);
    transition: 0.2s cubic-bezier(0.075, 0.82, 0.165, 1) all;

    &:hover {
      border-bottom: 1px solid var(--text-1);
      text-shadow: 0 0.1ch 0.5ch rgba(0, 0, 0, 0.2);
    }
  }

  b,
  strong {
    font-weight: 565;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: 450;
    text-wrap: balance;
    padding: 0 0 var(--padding-xxs) 0;
    margin: 0;
  }

  h1,
  h2 {
    color: var(--accent-color);
    /* Evaluates to 3.6rem for a 960px wide container, and 2.4rem for 360px */
    font-size: clamp(2.4rem, 1.68rem + 3.2cqi, 3.6rem);
    font-family: 'Fraunces', 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
    font-variation-settings:
      "SOFT" 100,
      "WONK" 1;
    font-weight: 240;
  }

  h2 {
    font-size: 1.8rem;
    font-weight: 300;
  }

  h3 {
    font-size: 1.3rem;
  }

  h4,
  h5,
  h6 {
    font-weight: 600;
  }

  p {
    text-wrap: pretty;
    margin: 0;
    padding: 0 0 var(--padding-md) 0;
  }

  img {
    max-width: 100%;
  }

  code {
    background: var(--bg-0);
    overflow: auto;
    padding: 0.25rem;
    border-radius: 0.5ch;
  }

  .footnotes,
  hr,
  .box {
    margin: var(--padding-sm) calc(var(--padding-sm) * -1);
    padding: var(--padding-xs) var(--padding-sm);
    border-top: 1px solid var(--border-color);
  }

  .box {
    border-bottom: 1px solid var(--border-color);
  }

  .footnotes {
    font-size: 90%;

    & hr {
      display: none;
    }

    padding-bottom: 0;
  }

  hr {
    border-width: 1px 0 0;
    padding: 0;
  }

  summary {
    padding: var(--padding-xxs);
    border-radius: var(--padding-xxs);
    cursor: default;
    font-weight: 700;

    &:hover {
      background: var(--bg-1);
    }
  }

  header {
    line-height: 1.1;
    padding: var(--padding-md) 0;

  }

  main {
    & nav a {
      color: light-dark(#000, #fff);
    }
  }

  main,
  footer,
  figure {
    padding-bottom: var(--padding-sm);
  }

  figure {
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: var(--padding-sm);
  }


  footer {
    margin-top: var(--padding-sm);
    display: flex;
    flex-direction: column;
    gap: var(--padding-xs);

    &>* {
      flex: 1;
    }
  }

  @container (width > 700px) {
    footer {
      flex-direction: row;
    }

  }

  time {
    color: var(--text-1);
  }

  blockquote {
    margin: var(--padding-sm);
    margin-left: var(--padding-xs);
    padding-left: calc(var(--padding-xs));
    border-left: 0.25rem solid var(--outline-color);
  }

  :popover-open {
    padding: 0.5rem;
    margin: auto;
    max-width: var(--maxwidth);
    border-radius: 2px;
    background: var(--bg-1);
    border: 1px solid var(--border-color);
    box-shadow: 0 0.1rem 0.5rem rgb(0 0 0/25);
  }

  :target {
    outline: 0.25rem solid var(--outline-color);
    border-radius: 0.125rem;

    &#main {
      >* {
        flex: 1;
      }

      outline: 0;
    }
  }
}


@layer interface {
  .note-thumbnail {
    padding: var(--padding-xxs) 0;
    border-bottom: 1px solid var(--border-color);

    & :is(h1, h2, h3, h4, h5, h6) {
      padding: 0;
    }

    &:last-child {
      border-bottom: none;
    }

    & :last-child {
      padding: 0;
    }
  }


  article>figure {
    margin: 0;
    max-width: initial;

    & img {
      object-fit: cover;
    }
  }

  & a:has(img),
  figure>:first-child {
    border: 0;
    box-shadow: 0 0 0 0.1rem var(--border-color);
    border-radius: var(--padding-xxxs);
    overflow: clip;
  }

  a:has(img):hover {
    box-shadow: 0 0 0 0.3rem var(--outline-color);
  }

  .hero-img {
    mask: url("footer.png") luminance center / contain no-repeat;
    background-color: var(--accent-color);
    height: 40dvh;
    margin-top: var(--padding-lg);
  }

}

